--- a/render.yaml
+++ b/render.yaml
@@ -5,18 +5,16 @@ services:
     buildCommand: "./build.sh"
     startCommand: "gunicorn erp.asgi:application -k uvicorn.workers.UvicornWorker"
     envVars:
+      - key: DJANGO_SETTINGS_MODULE
+        value: erp.settings
+      - key: SECRET_KEY
+        generateValue: true
       - key: DATABASE_URL
         fromDatabase:
           name: erp-db
           property: connectionString
-      - key: SECRET_KEY
-        generateValue: true
-      - key: WEB_CONCURRENCY
-        value: 4
-
 databases:
   - name: erp-db
-    plan: free
-
-
+    databaseName: erp
+    user: erp_user
 
